--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "flask-app/bin/python"
+    "python.pythonPath": "C:\\Users\\micha\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
