--- a/flask-app-deployment.yaml
+++ b/flask-app-deployment.yaml
@@ -13,13 +13,12 @@ spec:
     spec:
       containers:
       - name: flask-app
-        image: mbessarab/publicapp
+        image: mbessarab/publicapp:v2
         resources:
           limits:
             memory: "128Mi"
             cpu: "500m"
-      imagePullSecrets:
-          - name: docker-hub
         ports:
         - containerPort: 5000
-
+      imagePullSecrets:
+      - name: docker-hub
