--- a/flask-app-deployment.yaml
+++ b/flask-app-deployment.yaml
@@ -14,6 +14,9 @@ spec:
       containers:
       - name: flask-app
         image: mbessarab/publicapp:v2
+        env:
+        - name: AQUA_TEST
+          value: "{aqua-secret}"
         resources:
           limits:
             memory: "128Mi"
